--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "eslint": "^9.39.1",
+    "eslint-plugin-css-modules": "^2.12.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react-dom": "^2.3.7",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-react-x": "^2.3.7",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
